--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_config: ^1.1.1
+  fast_immutable_collections: ^9.1.5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
   # freezed_annotation: ^2.4.1
+  freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.3.6
   # riverpod_annotation: ^2.1.1
   touchable: ^1.0.2
@@ -49,6 +52,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   custom_lint: ^0.4.0
   riverpod_lint: ^1.3.2
+  build_runner: ^2.4.6
+  freezed: ^2.4.1
   # riverpod_generator: ^2.2.3
   # build_runner: ^2.4.6
   # freezed: ^2.4.1
